--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "gifted-md",
-    "description": "I am Gifted-Md Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t In case of Any Problem : www.youtube.com/giftedtechnexus",
-    "logo": "https://telegra.ph/file/54efddccf41281ad7ec51.jpg",
-    "repository": "https://github.com/Giftedmaurice/gifted-md-qr",
-    "keywords": ["whatsappbot", "giftedMd", "gifted Md bot", "Gifted-Md", "GiftedMdWhatsaooBot", "GiftedWaBot","GiftedMD","Gifted Md Whatsapp Bot","multi device"],
+    "name": "venocyber-md-bot",
+    "description": "I am Venocyber-Md-bot Whatsapp Chuddy Buddy built in NodeJs to make experience better\n\t In case of Any Problem : www.youtube.com/jastinmtewa",
+    "logo": "https://telegra.ph/file/1252ab43fa38f7b88ecf5.jpg",
+    "repository": "https://github.com/Kingjux/venocyber-md-bot-qr",
+    "keywords": ["whatsappbot", "giftedMd", "gifted Md bot", "Venocyber-Md-Bot", "VenocyberMdWhatsaooBot", "VenocyberWaBot","VenocyberMD","Venocyber Md Whatsapp Bot","multi device"],
     "success_url": "/", 
     "buildpacks": [{ "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest" } ],
     "env": {      
@@ -14,7 +14,7 @@
       },
       "MESSAGE": {
         "description": "set session id conformation message",
-        "value": "╔════◇║ *『 WOW YOU CHOOSEN GIFTED-MD 』*║ _You Have Complete the First Step to Deploy a Whatsapp Bot._╚════════════════════════╝╔═════◇║  『••• 𝗩𝗶𝘀𝗶𝘁 𝗙𝗼𝗿 𝗛𝗲𝗹𝗽 •••』║❒ *Ytube:* _youtube.com/@giftedtechnexus_║❒ *Owner:* _wa.me/254728782591_║❒ *Repo:* _https://github.com/Giftedmaurice/gifted-bot md_║❒ *WaGroup:* _https://chat.whatsapp.com/L0ctUUVLlsrFYwBHApKfew_║❒ *WaChannel:* _https://whatsapp.com/channel/0029VaJmfmTDJ6H7CmuBss0o_║❒ *Plugins:* _https://github.com/Giftedmaurice/gifted-bot-md-plugins_╚════════════════════════╝",
+        "value": "╔════◇║ *『 WOW YOU CHOOSEN VENOCYBER-MD-BOT 』*║ _You Have Complete the First Step to Deploy a Whatsapp Bot._╚════════════════════════╝╔═════◇║  『••• 𝗩𝗶𝘀𝗶𝘁 𝗙𝗼𝗿 𝗛𝗲𝗹𝗽 •••』║❒ *Ytube:* _youtube.com/@jastinmtewa_║❒ *Owner:* _wa.me/255698101622_║❒ *Repo:* _https://github.com/Kingjux/Venocyber-md-bot_║❒ *WaGroup:* _https://chat.whatsapp.com/L0ctUUVLlsrFYwBHApKfew_║❒ *WaChannel:* _https://whatsapp.com/channel/0029VaJmfmTDJ6H7CmuBss0o_║❒ *Plugins:* _https://github.com/Kingjux/Venocyber-md-bot-plugins_╚════════════════════════╝",
         "required": false 
       }
     }   
