--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gifted-md-qr",
+    "name": "venocyber-md-bot-qr",
     "version": "0.0.1",
     "description": "A multi functional whatsapp bot Web Qr Scanner.",
     "main": "index.js",
@@ -8,7 +8,7 @@
       "start": "node index.js"
     },
     "keywords": ["baileysQr","MdLogin", "Gifted-Md","whatsapp-bot","BotWhatsapp","whatsappMdLogin","adiwajshing/baileys","baileys-md-qr","multi-device-qr","md-qr","bot-qr","baileysQrScanner","wabot" ],
-    "author": "GiftedTech",
+    "author": "VenocyberTech",
     "license": "MIT",
     "dependencies": {
       "@hapi/boom": "^10.0.1",
@@ -20,7 +20,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.dev/Giftedmaurice/gifted-md-qr.git"
+        "url": "git+https://github.dev/Kingjux/venocyber-md-bot-qr.git"
     }
   }
   
